dc1.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: dc1
spec:
  type: ExternalName
  externalName: kafka-2.dc2.svc.cluster.local
  ports:
  - port: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-4
  namespace: dc1
spec:
  type: ExternalName
  externalName: kafka-4.dc2.svc.cluster.local
  ports:
  - port: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: dc1
spec:
  selector:
    app: kafka-1
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-1
  namespace: dc1
  labels:
    app: kafka-1
spec:
  containers:
  - name: kafka-1
    image: confluentinc/cp-kafka:6.0.0
    resources:
      limits:
        memory: "1000Mi"
      requests:
        memory: "1000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-3
  namespace: dc1
spec:
  selector:
    app: kafka-3
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-3
  namespace: dc1
  labels:
    app: kafka-3
spec:
  containers:
  - name: kafka-3
    image: confluentinc/cp-kafka:6.0.0
    resources:
      limits:
        memory: "1000Mi"
      requests:
        memory: "1000Mi"
