dc2.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: dc2
spec:
  type: ExternalName
  externalName: kafka-1.dc1.svc.cluster.local
  ports:
  - port: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-3
  namespace: dc2
spec:
  type: ExternalName
  externalName: kafka-3.dc1.svc.cluster.local
  ports:
  - port: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: dc2
spec:
  selector:
    app: kafka-2
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-2
  namespace: dc2
  labels:
    app: kafka-2
spec:
  containers:
  - name: kafka-2
    image: confluentinc/cp-kafka:6.0.0
    resources:
      limits:
        memory: "1000Mi"
      requests:
        memory: "1000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-4
  namespace: dc2
spec:
  selector:
    app: kafka-4
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-4
  namespace: dc2
  labels:
    app: kafka-4
spec:
  containers:
  - name: kafka-4
    image: confluentinc/cp-kafka:6.0.0
    resources:
      limits:
        memory: "1000Mi"
      requests:
        memory: "1000Mi"
