kafka-2.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: dc1
spec:
  selector:
    app: kafka-2
  ports:
    - name: client
      protocol: TCP
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-2
  namespace: dc1
  labels:
    app: kafka-2
spec:
  containers:
  - name: kafka-2
    image: confluentinc/cp-kafka:6.0.0
    resources:
      limits:
        memory: "1000Mi"
      requests:
        memory: "1000Mi"
