zookeeper-3.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-3
  namespace: dc1
spec:
  selector:
    app: zookeeper-3
  ports:
    - name: client
      protocol: TCP
      port: 2181
      targetPort: 2181
    - name: internal1
      protocol: TCP
      port: 2888
      targetPort: 2888
    - name: internal2
      protocol: TCP
      port: 3888
      targetPort: 3888

---
apiVersion: v1
kind: Pod
metadata:
  name: zookeeper-3
  namespace: dc1
  labels:
    app: zookeeper-3
spec:
  containers:
  - name: zookeeper-3
    image: confluentinc/cp-zookeeper:6.0.0
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
