block-ingress-dc1-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: dc1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
