block-zk1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-zk1
  namespace: dc1
spec:
  podSelector:
    matchLabels:
      app: zookeeper-1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  egress:
