block-zk2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-zk2
  namespace: dc2
spec:
  podSelector:
    matchLabels:
      app: zookeeper-2
  policyTypes:
  - Ingress
  - Egress
